added a css flie

--- a/2nd_index.html
+++ b/2nd_index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2nd pilot github page</title>
+    <link rel="stylesheet" href="Style/blog.css">
+
 </head>
 <body>
+    <div><h2>first paragraph added</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit neque saepe in sed delectus rerum molestias repellat cumque autem dolor.</p>gi</div>
     
 </body>
 </html>
