2ND paragraph and margin added

--- a/2nd_index.html
+++ b/2nd_index.html
@@ -11,5 +11,8 @@
     <div><h2>first paragraph added</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit neque saepe in sed delectus rerum molestias repellat cumque autem dolor.</p>gi</div>
     
+    <div><h2>2nd paragraph added</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit neque saepe in sed delectus rerum molestias repellat cumque autem dolor.</p>gi</div>
+    
 </body>
 </html>
